--- a/package.json
+++ b/package.json
@@ -10,20 +10,31 @@
   },
   "dependencies": {
     "@clerk/clerk-js": "^5.2.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@stripe/stripe-js": "^3.4.0",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.376.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
     "next": "14.2.3",
+    "next-cloudinary": "^6.5.1",
     "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "stripe": "^15.5.0",
     "svix": "^1.22.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@clerk/nextjs": "^5.0.5",
